--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,8 @@ pydantic==2.5.3
 python-dotenv==1.0.0
 replicate==0.25.0
 httpx==0.26.0
+sqlalchemy==2.0.23
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic-settings==2.1.0
+email-validator==2.1.0
