--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
 
 services:
+  db:
+    image: mysql:8
+    container_name: repli-mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpass       # cambia con la tua password
+      MYSQL_DATABASE: repli_db            # nome del DB
+      MYSQL_USER: repli_user              # utente DB
+      MYSQL_PASSWORD: replipass           # password utente
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - repli-network
+
   backend:
     build:
       context: ./backend
